--- a/scss/sections/brands.scss
+++ b/scss/sections/brands.scss
@@ -2,11 +2,18 @@
     margin-bottom: 69px;
     background: var(--c-yellow-main);
 
+    @include tablet-small {
+        margin-bottom: 30px;
+    }
+
     &__container {
         padding: 50px 171px;
 
         @include desktop {
             padding: 25px 60px;
+        }
+        @include tablet {
+            padding-inline: 30px;
         }
     }
 
@@ -18,6 +25,9 @@
 
         @include desktop {
             gap: 80px;
+        }
+        @include tablet {
+            gap: 30px;
         }
     }
 
