--- a/scss/sections/join.scss
+++ b/scss/sections/join.scss
@@ -9,6 +9,9 @@
         @include desktop {
             padding: 100px 200px;
         }
+        @include tablet {
+            padding: 40px 30px;
+        }
     }
     
     &__title {
@@ -23,6 +26,16 @@
         @include desktop {
             font-size: 48px;
         }
+        @include tablet {
+            padding: 40px;
+            margin-bottom: 20px;
+            font-size: 40px;
+        }
+        @include tablet-small {
+            padding: 20px;
+            margin-bottom: 20px;
+            font-size: 34px;
+        }
     }
     
     &__desc {
@@ -32,6 +45,11 @@
         letter-spacing: 0.03em;
         color: #fffcf8;
         margin-bottom: 49px;
+
+        @include tablet {
+            font-size: 24px;
+            margin-bottom: 36px;
+        }
     }
     &__email {
         max-width: 574px;
@@ -42,6 +60,11 @@
         background: var(--c-white);
         border-radius: 10px;
         padding: 10px;
+
+        @include tablet {
+            max-width: 90%;
+            padding: 6px;
+        }
     }
     
     &__email input {
@@ -58,6 +81,11 @@
         line-height: 146%;
         letter-spacing: 0.03em;
         color: #767676;
+
+        @include tablet {
+            font-size: 20px;
+            line-height: 116%;
+        }
     }
     
     &__button {
@@ -73,6 +101,10 @@
 
         @include desktop {
             font-size: 28px;
+        }
+        @include tablet {
+            font-size: 20px;
+            padding: 12px 32px;
         }
     }
 }
