--- a/scss/sections/welcome.scss
+++ b/scss/sections/welcome.scss
@@ -1,11 +1,18 @@
 .welcome {
     margin-bottom: 63px;
+
+    @include tablet-small {
+        margin-bottom: 30px;
+    }
     
     &__container {
         padding-inline: 100px;
         
         @include desktop {
             padding-inline: 50px;
+        }
+        @include tablet {
+            padding-inline: 30px;
         }
     }
 
@@ -25,6 +32,15 @@
             flex-direction: column;
             gap: initial;
         }
+        @include tablet-small {
+            padding: 30px 30px 0px;
+        }
+    }
+
+    &__info {
+        @include desktop-small {
+            text-align: center;
+        }
     }
     
     &__title_box {
@@ -33,18 +49,30 @@
 
         .white_rect {
             position: absolute;
-            max-width: 350px;
-            left: -6%;
-            top: -5%;
+            max-width: 450px;
+            left: -10%;
+            top: 0;
             z-index: auto;
+
+            @include desktop-small {
+                max-width: 350px;
+                left: 5%;
+            }
         }
         
         .yellow_rect {
             position: absolute;
-            max-width: 350px;
+            max-width: 450px;
             left: -5%;
-            bottom: -5%;
+            bottom: 25%;
             z-index: auto;
+            
+            @include desktop-small {
+                max-width: 350px;
+                left: 60%;
+                bottom: initial;
+                top: 0;
+            }
         }
     }
     
@@ -67,6 +95,12 @@
             font-weight: 800;
             margin-bottom: 20px;
         }
+        @include tablet {
+            font-size: 60px;
+        }
+        @include tablet-small {
+            font-size: 40px;
+        }
     }
     
     &__desc {
@@ -79,6 +113,9 @@
 
         @include desktop {
             font-size: 26px;
+        }
+        @include tablet {
+            font-size: 22px;
         }
     }
     
@@ -94,6 +131,17 @@
         }
         @include desktop-small {
             margin-bottom: 10px;
+            justify-content: center;
+        }
+    }
+
+    &__button_wave {
+
+        @include tablet {
+            max-width: 160px;
+        }
+        @include tablet-small {
+            display: none;
         }
     }
     
@@ -136,7 +184,8 @@
             align-self: flex-end;
         }
         @include desktop-small {
-            flex-shrink: initial;
+            align-self: center;
+            max-width: 60%;
         }
     }
     
