--- a/scss/sections/young_favorites.scss
+++ b/scss/sections/young_favorites.scss
@@ -7,12 +7,18 @@
     @include desktop-small {
         margin-bottom: 100px;
     }
+    @include tablet-small {
+        margin-bottom: 40px;
+    }
 
     &__container {
         padding: 0 100px;
 
         @include desktop {
             padding-inline: 60px;
+        }
+        @include tablet {
+            padding-inline: 30px;
         }
     }
     
@@ -38,6 +44,10 @@
 
         @include desktop {
             margin-bottom: 70px;
+        }
+        @include tablet {
+            margin-bottom: 50px;
+            font-size: 40px;
         }
     }
     
