--- a/scss/sections/advert.scss
+++ b/scss/sections/advert.scss
@@ -5,9 +5,11 @@
     @include desktop {
         margin-bottom: 150px;
     }
-
     @include desktop-small {
         margin-bottom: 100px;
+    }
+    @include tablet-small {
+        margin-bottom: 40px;
     }
 
     &__container {
@@ -23,7 +25,13 @@
         position: relative;
 
         @include desktop {
-            flex: 60%;
+            flex: 50%;
+        }
+        @include tablet {
+            flex: initial;
+        }
+        @include tablet-small {
+            display: none;
         }
     }
     
@@ -38,6 +46,10 @@
 
         @include desktop {
             padding: 80px 60px 80px 10px;
+        }
+        @include tablet-small {
+            padding: 30px;
+            text-align: center;
         }
     }
     
@@ -54,6 +66,11 @@
             max-width: 350px;
             top: 11%;
             left: 0;
+        }
+        @include tablet-small {
+            max-width: 280px;
+            top: 6%;
+            left: 12%;
         }
     }
     
@@ -73,6 +90,10 @@
             font-size: 70px;
             font-weight: 800;
         }
+        @include tablet {
+            font-size: 60px;
+            font-weight: 700;
+        }
     }
 
     &__desc {
@@ -88,6 +109,11 @@
             @include desktop {
                 font-size: 30px;
             }
+            @include tablet {
+                font-size: 22px;
+                font-weight: 400;
+                margin-bottom: 36px;
+            }
         }
         
         #advert__date {
@@ -99,6 +125,9 @@
 
             @include desktop {
                 font-size: 30px;
+            }
+            @include tablet {
+                font-size: 26px;
             }
         }
         
@@ -112,6 +141,10 @@
 
             @include desktop {
                 font-size: 30px;
+            }
+            @include tablet {
+                margin-bottom: 36px;
+                font-size: 22px;
             }
         }
     }
@@ -128,11 +161,19 @@
         @include desktop-small {
             padding: 22px 40px;
         }
+        @include tablet {
+            font-size: 24px;
+            padding: 20px 36px;
+        }
     }
     
     &__image .star {
         position: absolute;
         max-width: 76px;
+
+        @include tablet {
+            max-width: 56px;
+        }
     }
     
     &__image .upleft_star {
@@ -146,6 +187,9 @@
         @include desktop {
             right: 10%;
         }
+        @include tablet {
+            right: 0;
+        }
     }
     
     &__image .downleft_star {
@@ -154,6 +198,9 @@
         @include desktop {
             left: 10%;
         }
+        @include tablet {
+            left: 0;
+        }
     }
     
     &__image .downright_star {
@@ -161,6 +208,9 @@
         bottom: 25%;
         @include desktop {
             right: 5%;
+        }
+        @include tablet {
+            right: 0;
         }
     }
 }
