--- a/scss/sections/header.scss
+++ b/scss/sections/header.scss
@@ -9,8 +9,11 @@
     }
     @include desktop-small {
         margin-top: 30px;
-        margin-top: 40px;
+        margin-bottom: 40px;
         gap: 10px;
+    }
+    @include tablet {
+        margin: 30px;
     }
 
     &__logo {
